# quickcuts

./: .gitignore  CLAUDE.md  README.md  VERSION.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: generate-icons.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ffmpeg.rs  files.rs  metadata.rs  mod.rs  sidecar.rs
src/components/: CoverTextEditor.tsx  ErrorBoundary.tsx  ExportButton.tsx  MediaTimeline.tsx  PresetSelector.tsx  PreviewPanel.tsx  ProgressModal.tsx
src/hooks/: useExport.ts  useFFmpeg.ts  useMediaFiles.ts
src/stores/: projectStore.ts
src/types/: index.ts
src/utils/: mediaUtils.ts  presets.ts
